@startuml User.WebApp classes
hide empty members

interface IDataProtector << ASP.NET Core >>
{
    +bool IDataProtector(string)
    +byte[] Protect(byte[])
    +byte[] Unprotect(byte[])
}

class CookieProtector
IDataProtector <|.. CookieProtector
CookieProtector --> Pkcs12CertificateOptions

abstract class HttpContext << ASP.NET Core >>
{
    +Task SignInAsync(string, ClaimsPrincipal)
    +Task SignOutAsync(string)
}
abstract class Controller << ASP.NET Core >>
Controller --> HttpContext

class Pkcs12CertificateOptions << External >>
abstract class BaseExceptionFilter << External >>
interface IUserDbContext << External >>
interface IJobWebApiClient << External >>
interface ILogger << Serilog >>
interface IFormFile << ASP.NET Core >>
interface IMemoryCache << ASP.NET Core >>

HttpContext --> CookieProtector

class CreateUserJobRequest
{
    public TimeSpan Timeout { get; set; }
    public IFormFile Script { get; set; }
}

class LoginRequest
{
    public string ReturnUrl { get; set; }
    public string Username { get; set; }
    public string Password { get; set; }
}

class JobWebApiExceptionsFilter
BaseExceptionFilter <|-- JobWebApiExceptionsFilter

class JobWebApiTimeoutExceptionFilter
BaseExceptionFilter <|-- JobWebApiTimeoutExceptionFilter

class AuthenticationController
{
    +ActionResult GetLoginView(string)
    +ActionResult GetLogoutView()
}
Controller <|-- AuthenticationController
AuthenticationController --> LoginRequest

class AuthenticationApiController
{
    +Task<ActionResult> SignInAsync(LoginRequest, CancellationToken)
    +Task<ActionResult> SignOutAsync()
}
Controller <|-- AuthenticationApiController
AuthenticationApiController --> IUserDbContext
AuthenticationApiController --> ILogger
AuthenticationApiController --> LoginRequest
AuthenticationApiController --> IMemoryCache

class JobController
{
    +Task<ActionResult> GetViewAsync(CancellationToken)
    +ActionResult GetJobResultsView(Guid)
    +ActionResult GetJobCreateView()
}
Controller <|-- JobController
JobController --> IUserDbContext
JobController --> CreateUserJobRequest

class JobApiController
{
    +Task<ActionResult> CreateNewJobAsync([CreateUserJobRequest, CancellationToken)
    +Task<ActionResult<JobResultResponse>> GetUserJobResultsAsync(Guid, CancellationToken)
    -Task<string> ReadFileAsBase64(IFormFile, CancellationToken)
}
Controller <|-- JobApiController
JobApiController --> IUserDbContext
JobApiController --> IJobWebApiClient
JobApiController --> CreateUserJobRequest
JobApiController --> IFormFile
JobApiController --> JobWebApiExceptionsFilter
JobApiController --> JobWebApiTimeoutExceptionFilter

@enduml
